# aws-bedrock-invoke-python

./: .env.example  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
examples/: invoke_json_example.py  invoke_text_example.py
src/aws_bedrock_invoke/: __init__.py  config.py  content.py  exceptions.py  invoker.py  parsing.py  retry.py  utils.py
tests/: test_content.py  test_invoker.py  test_parsing.py  test_retry.py  test_utils.py
