[project]
name = "aws-bedrock-invoke"
version = "1.0.0"
authors = [
  { name="Not Empty Foundation", email="dev@not-empty.org" },
]
description = "Small Python library for invoking Claude 4.x models on AWS Bedrock with manual retries, prompt caching helpers, and JSON parsing."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3>=1.34.0",
]

[project.urls]
Homepage = "https://github.com/not-empty/aws-bedrock-invoke-python"
Issues = "https://github.com/not-empty/aws-bedrock-invoke-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aws_bedrock_invoke"]
